Set PlexPluginRegions key to US

--- a/Contents/Info.plist
+++ b/Contents/Info.plist
@@ -40,5 +40,9 @@
 			<string>webkit</string>
 		</array>
 	</dict>
+	<key>PlexPluginRegions</key>
+	<array>
+		<string>US</string>
+	</array>
 </dict>
 </plist>
